# MaaFrameworkTesting

./: .gitmodules  CMakeLists.txt
PipelineSmoking/: MaaRecording.txt
PipelineSmoking/resource/: properties.json
PipelineSmoking/resource/pipeline/: awards.json  startup.json  wilderness.json
